# sanic_example

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  run.py
app/: app.py  blueprint.py  database.py  models.py
app/handlers/: bill.py  payment.py  product.py  user.py
config/: env.example  setting.py
migrations/models/: 0_20221102132700_init.py
tests/: conftest.py
tests/handlers/: test_product.py
tests/helpers/: database.py
utils/: auth.py  hashing.py  validation.py
utils/models/: bill.py  product.py  user.py
utis/: auth.py  validation.py
utis/models/: bill.py  user.py
